# aerial-profiling

cuPHY/examples/common/: cuphy.hpp
cuPHY/profiling/cfo_ta_est/: CMakeLists.txt  build.sh  cfo_ta_est_profiler.cu  profiling_stubs.cpp
cuPHY/profiling/ch_est/: CMakeLists.txt  build.sh  ch_est_profiler.cu  profiling_stubs.cpp
cuPHY/src/cuphy/ch_est/: ch_est_graph_mgr.hpp
cubb_scripts/install/: versions.sh
profiling/ch_est_kernel_bench/: CMakeLists.txt  README.md  bench_windowed_chest.cu
